--- a/FETCH_DATA.ipynb
+++ b/FETCH_DATA.ipynb
@@ -44,11 +44,11 @@
         "results = client.get(\"wg3w-h783\", limit=10000000000)"
       ],
       "metadata": {
+        "id": "xaaq-RyK2w2G",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "xaaq-RyK2w2G",
-        "outputId": "578e151d-3aa9-428d-b370-a6133f5be83a"
+        "outputId": "02c6b627-8f6d-4274-d554-0bf4827d6ca4"
       },
       "execution_count": 3,
       "outputs": [
@@ -92,23 +92,23 @@
       "metadata": {
         "id": "aBXdE71W6TWB"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "project_id = \"training-project-404110\"\n",
+        "project_id = \"major-project-407515\"\n",
         "!gcloud config set project {project_id}"
       ],
       "metadata": {
+        "id": "7Mv1uBbo6TTp",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "7Mv1uBbo6TTp",
-        "outputId": "4f9c8b09-9b71-4c7f-b101-7563d1e02156"
+        "outputId": "92082e16-db49-4588-ff41-dd1bf4a72751"
       },
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -122,12 +122,21 @@
     {
       "cell_type": "code",
       "source": [
-        "final_df.to_csv(\"gs://training-project-404110.appspot.com/MAJOR_PROJECT/DATA.csv\")"
+        "final_df.to_csv(\"gs://project_major//MAJOR_PROJECT/DATA.csv\")"
       ],
       "metadata": {
         "id": "xfmA3Zho2z_C"
       },
-      "execution_count": 10,
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "zMNYXpwrDKWr"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
